--- a/Css/servicios.css
+++ b/Css/servicios.css
@@ -79,77 +79,87 @@ a {
 .academic {
   background-image: url("../Imagenes/academic.png");
   background-size: cover;
-  height: 350px;
+  height: 21em;
 }
 
 .title-academic {
   color: #008d36;
   font-size: x-large;
-  margin-left: 33em;
+  margin-left: 23em;
   padding-top: 2em;
+  font-size: 2em;
 }
 
 .text-academic {
   color: white;
-  margin-left: 40em;
-  margin-right: 14em;
+  margin-left: 37em;
+  margin-right: 13em;
+  font-size: 1.1em;
 }
 
 .strategy {
   background-image: url("../Imagenes/strategy.png");
   background-size: cover;
-  height: 350px;
+  height: 21em;
+  margin-bottom: 1em;
 }
 
 .title-strategy {
-  margin-left: 13em;
-  padding-top: 3em;
+  margin-left: 9em;
+  padding-top: 2.5em;
+  font-size: 2em;
 }
 
 .text-strategy {
-  margin-left: 11em;
-  margin-right: 46em;
-  padding-top: 1em;
+  margin-left: 10em;
+  margin-right: 43em;
+  padding-top: 0.7em;
+  font-size: 1.1em;
 }
 
 .social {
   background-image: url("../Imagenes/social.png");
   background-size: cover;
-  height: 350px;
+  height: 21em;
 }
 
 .branding {
   background-image: url("../Imagenes/design.png");
   background-size: cover;
-  height: 350px;
+  height: 21em;
+  margin-top: 0%;
 }
 
 .title-branding {
-  margin-left: 12em;
-  padding-top: 3em;
+  margin-left: 7em;
+  padding-top: 2em;
+  font-size: 2em;
 }
 
 .text-branding {
-  margin-left: 11em;
-  margin-right: 45em;
-  padding-top: 1em;
+  margin-left: 9em;
+  margin-right: 42em;
+  padding-top: 0.7em;
+  font-size: 1.1em;
 }
 
 .podcast {
   background-image: url("../Imagenes/Baner\ Podcast.png");
   background-size: cover;
-  height: 350px;
+  height: 21em;
 }
 
 .title-podcast {
   color: #008d36;
   font-size: x-large;
-  margin-left: 35em;
+  margin-left: 26em;
   padding-top: 2em;
+  font-size: 2em;
 }
 
 .text-podcast {
   color: white;
-  margin-left: 45em;
-  margin-right: 14em;
+  margin-left: 40em;
+  margin-right: 10em;
+  font-size: 1.1em;
 }
