--- a/Css/contacto.css
+++ b/Css/contacto.css
@@ -44,7 +44,7 @@ a {
 .nav-item-btn {
   float: right;
   margin-right: 6.25em; /* 100px to em */
-  margin-top: 1.25em; /* 20px to em */
+  margin-top: 2em; /* 20px to em */
   padding: 1.14em 1.06em; /* 14px 16px to em */
   display: flex;
   background-color: #008d36;
@@ -132,7 +132,7 @@ input {
   padding: 2em;
   border: none;
   background-color: rgb(207, 203, 203);
-  color: rgb(207, 203, 203);
+  color: black;
   border-radius: 1.5em;
   height: 0.1em;
 }
@@ -199,4 +199,135 @@ input {
   padding: 0.4em;
   margin-top: 1em;
   font-size: 1.5em;
+}
+
+@media (max-width: 768px) {
+  .formP {
+    display: block;
+    margin-top: 2em;
+    margin-left: 3em;
+    margin-right: 3em;
+  }
+
+  .descripcion {
+    background-color: #1a1830;
+  }
+
+  .text1 {
+    padding-left: 1em;
+    padding-right: 1em;
+    padding-top: 8em;
+    padding-bottom: 1em;
+    color: #008d36;
+    font-size: 1.5em;
+  }
+
+  .text2 {
+    padding-left: 1em;
+    padding-right: 1em;
+    font-size: 1.5em;
+    padding-bottom: 2em;
+    color: white;
+  }
+
+  .form {
+    background-color: white;
+    padding-right: 3em;
+    display: block;
+  }
+
+  h2 {
+    text-align: center;
+    color: #008d36;
+    padding-left: 2em;
+    padding-top: 2em;
+  }
+
+  .form-group {
+    max-width: 10em;
+    margin: 0 auto;
+    padding: 1em;
+  }
+
+  label {
+    display: block;
+    margin-bottom: 5px;
+    color: rgb(102, 102, 102);
+  }
+
+  input {
+    width: 17em;
+    padding: 2em;
+    border: none;
+    background-color: rgb(207, 203, 203);
+    color: rgb(207, 203, 203);
+    border-radius: 1.5em;
+    height: 0.1em;
+  }
+
+  .btn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 14em;
+    padding: 2em;
+    height: 1.2em;
+    background-color: #008d36;
+    color: white;
+    font-size: 1em;
+    border: none;
+    border-radius: 2em;
+    cursor: pointer;
+    margin-bottom: 3em;
+    margin-left: 8.5em;
+  }
+
+  .btn-donar {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 14em;
+    padding: 2em;
+    height: 1.2em;
+    background-color: #008d36;
+    color: white;
+    font-size: 1em;
+    border: none;
+    border-radius: 2em;
+    cursor: pointer;
+    margin-top: 5em;
+    margin-left: 17em;
+    margin-bottom: 5em;
+  }
+
+  .vaki {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    background-color: white;
+    width: 40em;
+    height: 28em;
+    align-items: center;
+    margin-left: 3.6em;
+  }
+
+  .p1 {
+    color: #008d36;
+    padding: 0.4em;
+    margin-top: 1em;
+    font-size: 1.5em;
+  }
+
+  .h1 {
+    color: black;
+    padding: 0.4em;
+    margin-top: 1em;
+    font-size: 1.8em;
+  }
+
+  .p2 {
+    color: black;
+    padding: 0.4em;
+    margin-top: 1em;
+    font-size: 1.5em;
+  }
 }
