--- a/Css/contacto.css
+++ b/Css/contacto.css
@@ -201,7 +201,7 @@ input {
   font-size: 1.5em;
 }
 
-@media (max-width: 768px) {
+@media only screen and(max-width: 768px) {
   .formP {
     display: block;
     margin-top: 2em;
